--- a/kadai.html
+++ b/kadai.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>kadai</title>
+<title>ケーキハウス</title>
 <style type="text/css">
 img {
 width: 100%;
@@ -53,3 +53,4 @@ width: 100%;
 <!--</div>-->
 </body>
 </html>
+
